# order_lunch

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  alembic.ini  lunch.db  main.py  pyproject.toml  scratch_req.py  test_oauth.py
backend/alembic/: env.py
backend/app/: black_list.py  cookie.py  login.py  lunch.py  record.py
backend/config/: settings.py
backend/models/: black_list.py  record.py
backend/utils/: db_connection.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AuthPage.tsx  LunchOptionCard.tsx  LunchPage.tsx
