[project]
name = "iei-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.110.0",
    "pydantic>=2.7.0",
    "requests>=2.33.1",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]
